trying height=100% for background image to avoid cutoff.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -154,7 +154,7 @@ aside {
 header {
     position: relative;
     height: 100%;
-    min-height: auto;
+    /* min-height: auto; */
     @include background-cover;
     background-position: center;
     background-image: url('../img/YellowRedTape.png');
